@@ -52,6 +52,7 @@ using namespace std;
 #include "modules/EventManager.h"
 #include "modules/Filesystem.h"
 #include "modules/Gui.h"
+#include "modules/Textures.h"
 #include "modules/World.h"
 #include "modules/Persistence.h"
 #include "RemoteServer.h"
@@ -1670,8 +1671,10 @@ bool Core::Init()
         return false;
     }
 
+    cerr << "Initializing textures.\n";
+    Textures::init(con);
     // create mutex for syncing with interactive tasks
-    cerr << "Initializing Plugins.\n";
+    cerr << "Initializing plugins.\n";
     // create plugin manager
     plug_mgr = new PluginManager(this);
     plug_mgr->init();
@@ -1765,12 +1768,7 @@ bool Core::Init()
 
     cerr << "DFHack is running.\n";
 
-    {
-        auto L = Lua::Core::State;
-        Lua::StackUnwinder top(L);
-        Lua::CallLuaModuleFunction(con, L, "script-manager", "reload");
-        onStateChange(con, SC_CORE_INITIALIZED);
-    }
+    onStateChange(con, SC_CORE_INITIALIZED);
 
     return true;
 }
@@ -2138,6 +2136,13 @@ void Core::onStateChange(color_ostream &out, state_change_event event)
 
     switch (event)
     {
+    case SC_CORE_INITIALIZED:
+        {
+            auto L = Lua::Core::State;
+            Lua::StackUnwinder top(L);
+            Lua::CallLuaModuleFunction(con, L, "script-manager", "reload");
+        }
+        break;
     case SC_WORLD_LOADED:
     case SC_WORLD_UNLOADED:
     case SC_MAP_LOADED:
@@ -2171,6 +2176,10 @@ void Core::onStateChange(color_ostream &out, state_change_event event)
                 evtlog << std::endl;
             }
         }
+        break;
+    case SC_VIEWSCREEN_CHANGED:
+        Textures::init(out);
+        break;
     default:
         break;
     }
@@ -2248,6 +2257,7 @@ int Core::Shutdown ( void )
     }
     // invalidate all modules
     allModules.clear();
+    Textures::cleanup();
     memset(&(s_mods), 0, sizeof(s_mods));
     d.reset();
     return -1;
