@@ -40,6 +40,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## Misc Improvements
 - Scrollable widgets now react to mouse wheel events when the mouse is over the widget
 - the ``dfhack-config/scripts/`` folder is now searched for scripts by default
+- `hotkeys`: overlay hotspot widget now shows the DFHack logo in graphics mode and "DFHack" in text mode
 
 ## Documentation
 - `overlay-dev-guide`: added troubleshooting tips and common development workflows
